CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

PROJECT(HELLO)

SET(SRC_LIST main.c)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "This is SOURCE LIST " ${SRC_LIST})
MESSAGE(STATUS "This is CMAKE_INSTALL_PREFIX " ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "This is EXECUTABLE_OUTPUT_PATH " ${EXECUTABLE_OUTPUT_PATH})

ADD_EXECUTABLE(hello_233 ${SRC_LIST})
